--- a/src/views/clinic-panel/pages/panel/properties-and-services.ejs
+++ b/src/views/clinic-panel/pages/panel/properties-and-services.ejs
@@ -10,79 +10,79 @@
                 <div class="form-box">
                   <div class="title">Diyaliz Tedavisi Tipleri</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                    <label class="form-check-label selected" for="flexCheckChecked"> Hemodiyaliz </label>
+                    <input class="form-check-input" type="checkbox" value="Hemodiyaliz" name="Hemodiyaliz" id="Hemodiyaliz" checked disabled />
+                    <label class="form-check-label selected" for="Hemodiyaliz"> Hemodiyaliz </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Hemodiyafiltrasyon </label>
+                    <input class="form-check-input" type="checkbox" value="Hemodiyafiltrasyon" name="Hemodiyafiltrasyon" id="Hemodiyafiltrasyon" />
+                    <label class="form-check-label" for="Hemodiyafiltrasyon"> Hemodiyafiltrasyon </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Merkezde Gece Hemodiyalizi </label>
+                    <input class="form-check-input" type="checkbox" value="Merkezde Gece Hemodiyalizi" name="Merkezde_Gece_Hemodiyalizi" id="Merkezde_Gece_Hemodiyalizi" />
+                    <label class="form-check-label" for="Merkezde_Gece_Hemodiyalizi"> Merkezde Gece Hemodiyalizi </label>
                   </div>
                   <div class="form-group not-border checkbox">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
                     <label class="form-check-label" for="flexCheckChecked"> Ev Hemodiyalizi </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Hemşireli Ev Hemodiyalizi </label>
+                    <input class="form-check-input" type="checkbox" value="Hemşireli Ev Hemodiyalizi" name="Hemsireli_Ev_Hemodiyalizi" id="Hemsireli_Ev_Hemodiyalizi" />
+                    <label class="form-check-label" for="Hemsireli_Ev_Hemodiyalizi"> Hemşireli Ev Hemodiyalizi </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Periton Diyalizi </label>
+                    <input class="form-check-input" type="checkbox" value="Periton Diyalizi" name="Periton_Diyalizi" id="Periton_Diyalizi" />
+                    <label class="form-check-label" for="Periton_Diyalizi"> Periton Diyalizi </label>
                   </div>
                 </div>
                 <div class="form-box">
                   <div class="title mt-4">Seans İçi Hizmetler</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                    <label class="form-check-label selected" for="flexCheckChecked"> Seans İçi Yiyecek Sunumu </label>
+                    <input class="form-check-input" type="checkbox" value="Seans İçi Yiyecek Sunumu" name="Seans_Ici_Yiyecek_Sunumu" id="Seans_Ici_Yiyecek_Sunumu" />
+                    <label class="form-check-label selected" for="Seans_Ici_Yiyecek_Sunumu"> Seans İçi Yiyecek Sunumu </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Ücretsiz Ulaşım Hizmeti </label>
+                    <input class="form-check-input" type="checkbox" value="Ücretsiz Ulaşım Hizmeti" name="Ucretsiz_Ulasım_Hizmeti" id="Ucretsiz_Ulasım_Hizmeti" />
+                    <label class="form-check-label" for="Ucretsiz_Ulasım_Hizmeti"> Ücretsiz Ulaşım Hizmeti </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Kişiye Özel Tv Hizmeti </label>
-                  </div>
-                  <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Kişiye Özel Tv Hizmeti </label>
+                    <input class="form-check-input" type="checkbox" value="Kişiye Özel Tv Hizmeti" name="Kisiye_Ozel_Tv_Hizmeti" id="Kisiye_Ozel_Tv_Hizmeti" />
+                    <label class="form-check-label" for="Kisiye_Ozel_Tv_Hizmeti"> Kişiye Özel Tv Hizmeti </label>
                   </div>
                 </div>
                 <div class="form-box">
                   <div class="title mt-4">Tesis İçi İmkanlar</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                    <label class="form-check-label selected" for="flexCheckChecked"> Tekerlekli Sandalye Kullanımına Uygun </label>
+                    <input class="form-check-input" type="checkbox" value="Tekerlekli Sandalye Kullanımına Uygun" name=Tekerlekli_Sandalye_Kullanımına_Uygun id="Tekerlekli_Sandalye_Kullanımına_Uygun" />
+                    <label class="form-check-label selected" for="Tekerlekli_Sandalye_Kullanımına_Uygun"> Tekerlekli Sandalye Kullanımına Uygun </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Tutunma Kollu Tuvalet </label>
+                    <input class="form-check-input" type="checkbox" value="Tutunma Kollu Tuvale" name="Tutunma_Kollu_Tuvale" id="Tutunma_Kollu_Tuvale" />
+                    <label class="form-check-label" for="Tutunma_Kollu_Tuvale"> Tutunma Kollu Tuvalet </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Tedavi Salonlarında Air Condition </label>
+                    <input class="form-check-input" type="checkbox" value="Tedavi Salonlarında Air Condition" name="Tutunma_Kollu_Tuvale" id="Tedavi_Salonlarında_Air_Condition" />
+                    <label class="form-check-label" for="Tedavi_Salonlarında_Air_Condition"> Tedavi Salonlarında Air Condition </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Giriş-Çıkış Alanlarında Air Condition </label>
+                    <input class="form-check-input" type="checkbox" value="Giriş-Çıkış Alanlarında Air Condition" name="Giris_Cikis_Alanlarinda_Air_Condition" id="Giris_Cikis_Alanlarinda_Air_Condition" />
+                    <label class="form-check-label" for="Giris_Cikis_Alanlarinda_Air_Condition"> Giriş-Çıkış Alanlarında Air Condition </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Hassas Tartı </label>
+                    <input class="form-check-input" type="checkbox" value="Hassas Tartı" name="Hassas_Tarti" id="Hassas_Tarti" />
+                    <label class="form-check-label" for="Hassas_Tarti"> Hassas Tartı </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Rampalı Hassas Tartı </label>
+                    <input class="form-check-input" type="checkbox" value="Rampalı Hassas Tartı" name="Rampali_Hassas_Tarti" id="Rampali_Hassas_Tarti" />
+                    <label class="form-check-label" for="Rampali_Hassas_Tarti"> Rampalı Hassas Tartı </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Kişisel Eşyalar İçin Kilitli Dolap </label>
+                    <input class="form-check-input" type="checkbox" value="Kişisel Eşyalar İçin Kilitli Dolap" name="Kisisel_Esyalar_Icin_Kilitli_Dolap" id="Kisisel_Esyalar_Icin_Kilitli_Dolap" />
+                    <label class="form-check-label" for="Kisisel_Esyalar_Icin_Kilitli_Dolap"> Kişisel Eşyalar İçin Kilitli Dolap </label>
                   </div>
+                  <!-- ! TODO BURADAN DEVAM EDECEK... -->
+                  <!-- ! label alanlarındaki text yazısı ingizlizce karakterler ile aralarındaki bosluk kaldırılacak '_' eklenecek -->
+                  <!-- ! '_' li ifade input alanındaki id ve name alanlarına eklenecek(inputlara name alanı eklenecek) -->
+                  <!-- ! '_' li ifade label lardaki for lara eklenecek.. -->
                   <div class="form-group not-border checkbox">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
                     <label class="form-check-label" for="flexCheckChecked"> Otopark Hizmeti </label>
