--- a/src/views/clinic-panel/pages/add-clinic/choose-center.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/choose-center.ejs
@@ -25,71 +25,71 @@
       <div class="tm-section-title">Merkezinizin Adı Nedir?</div>
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-          <form class="tm-form-wide" action="/panel/choose-center-get-clinic-list" method="POST">
+          <form class="tm-form-wide" autocomplete="off" onkeypress="return event.keyCode != 13;" >
             <div class="form-group">
               <label for="center-name">Merkezin Adını Girin</label>
               <input type="text" class="form-control" id="companyName" name="companyName" placeholder="Şirket adını giriniz" />
             </div>
           </form>
 
-          <% if (list != undefined ) { %>
-          <form class="tm-form-wide" action="/panel/company-information" method="POST">
-            <% if (list.length > 0) { %> <% list.forEach(element => { %>
-            <div class="tm-text-info">Aşağıda yer alan merkezlerden tam eşleşeni seçiniz.</div>
-            <div class="form-group checkbox">
-              <input class="form-check-input" name="companyId" type="checkbox" value="<%- element._id %>" id="<%- element._id %>" />
-              <label class="form-check-label" for="flexCheckChecked"> <%- element.companyInformation.companyName %> </label>
-            </div>
-
-            <% }) %>
-            <div class="tm-button-next left">
-              <a href="/panel/choose-personel"
-                ><button type="button" class="btn btn-outline-secondary">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
-                  </svg></button
-              ></a>
-              <button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button>
-            </div>
-            <% } else { %>
-            <div class="tm-text-info">Girdiğiniz isimle kayıtlı merkez bulunmamaktadır. Yeni diyaliz merkezi kaydı için tıklayınız..</div>
-
-            <% } %>
+          <form id="clinicListForm" class="tm-form-wide" action="/panel/company-information" method="POST">
+            <ul id="clinicList"></ul>
+            <button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button>
           </form>
-          <% } %>
         </div>
-
-        
 
         <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5">
           <!--======= INFORMATION CARD =====-->
           <div class="tm-box-info">
-              <div class="tm-box-top">
-                  <div class="col d-flex align-items-start">
-                      <div class="me-1"><img src="../user/img/clinic/attention.png" alt="Attention Icon" />
-                      </div>
-                      <div class="tm-box-title text-dark">Şirketin haklarını tamamen size ait mi?</div>
-                  </div>
+            <div class="tm-box-top">
+              <div class="col d-flex align-items-start">
+                <div class="me-1"><img src="../user/img/clinic/attention.png" alt="Attention Icon" /></div>
+                <div class="tm-box-title text-dark">Şirketin haklarını tamamen size ait mi?</div>
               </div>
-              <div class="tm-box-bottom">
-                  <div>
-                      Seçmiş olduğunuz merkezin bütün haklarının size ait olduğunu bir sonraki adıma
-                      geçerek onaylamış olacaksınız. Bir yanlışlık olduğunu veyahut hakların size ait
-                      olmadığını düşünüyorsanız lütfen seçiminizi tekrar gözden geçirin.
-                  </div>
-                  <div>
-                      Merkezinizin size ait olduğunu doğrulayabilmemiz için bu bilgilerin eksiksiz ve
-                      doğru girilmesi gerekmektedir.
-                  </div>
-                  <div>
-                      Ruhsat üzerinde ki isimi birebir doğru yazdığınızdan emin olun.
-                  </div>
-              </div>
+            </div>
+            <div class="tm-box-bottom">
+              <div>Seçmiş olduğunuz merkezin bütün haklarının size ait olduğunu bir sonraki adıma geçerek onaylamış olacaksınız. Bir yanlışlık olduğunu veyahut hakların size ait olmadığını düşünüyorsanız lütfen seçiminizi tekrar gözden geçirin.</div>
+              <div>Merkezinizin size ait olduğunu doğrulayabilmemiz için bu bilgilerin eksiksiz ve doğru girilmesi gerekmektedir.</div>
+              <div>Ruhsat üzerinde ki isimi birebir doğru yazdığınızdan emin olun.</div>
+            </div>
           </div>
-      </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
+<script>
+  const searchBox = document.getElementById("companyName");
+  const centerList = document.getElementById("clinicList");
 
+  searchBox.addEventListener("keyup", function (event) {
+    event.preventDefault();
+    if (event.target.value.length > 2) {
+      centerList.innerHTML= "";
+      $.post("/panel/choose-center-get-clinic-list", { companyName: event.target.value }, function (response) {
+        document.getElementById("clinicListForm").style.display = "block";
+        if(response.length > 0) {
+        response.forEach((element) => {
+          if (!centerList.innerHTML.includes(element._id)) {
+            var schema = `<div class="form-group checkbox">
+              <input class="form-check-input" name="companyId" type="checkbox" value="${element._id}" id="${element._id}" />
+              <label class="form-check-label" for="${element._id}"> ${element.companyInformation.companyName} </label>
+            </div>`;
+            var li = document.createElement("li");
+            li.innerHTML = schema;
+            centerList.appendChild(li);
+          }
+        });
+        }else{
+          var li = document.createElement("li");
+            li.innerHTML = `<div class="tm-text-info">Girdiğiniz isimle kayıtlı merkez bulunmamaktadır. Yeni diyaliz merkezi kaydı için tıklayınız..</div>`;
+            centerList.appendChild(li);
+        }
+      });
+    } else {
+      document.getElementById("clinicListForm").style.displayy = "none";
+      centerList.innerHTML = "";
+    }
+  });
+</script>
