changing sigorta types

--- a/src/views/user/pages/clinic/appointment.ejs
+++ b/src/views/user/pages/clinic/appointment.ejs
@@ -317,47 +317,52 @@
                 </div>
                   <div id="selectorsgk" class="sgk" style="display: none;">
                   <div class="form-group not-border checkbox form-check">
-                    <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1" value="SSK" />
-                    <label class="form-check-label" for="exampleRadio1">SSK</label>
+                    <input type="radio" name="insurance" class="form-check-input" id="SSK" value="SSK" />
+                    <label class="form-check-label" for="SSK">SGK</label>
                   </div>
                   <div class="form-group not-border checkbox form-check">
-                    <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1"
-                      value="Yeşilkart Sigortalısı" />
-                    <label class="form-check-label" for="exampleRadio1">Yeşilkart Sigortalısı</label>
-                  </div>
-                  <div class="form-group not-border checkbox form-check">
-                    <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1"
-                      value="Banka Sigortalısı" />
-                    <label class="form-check-label" for="exampleRadio1">Banka Sigortalısı</label>
-                  </div>
-                  <div class="form-group not-border checkbox form-check">
-                    <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1"
-                      value="Yurtdışı Sigortalısı" />
-                    <label class="form-check-label" for="exampleRadio1">Yurtdışı Sigortalısı</label>
-                  </div>
-                  <div class="form-group not-border checkbox form-check">
-                    <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1"
+                    <input type="radio" name="insurance" class="form-check-input" id="custom"
                       value="Özel Sigortalı" />
-                    <label class="form-check-label" for="exampleRadio1">Özel Sigortalı </label>
+                    <label class="form-check-label" for="custom">Özel Sigorta</label>
+                  </div>
+                  <!-- <div class="form-group not-border checkbox form-check">
+                    <input type="radio" name="insurance" class="form-check-input" id="greenCard"
+                      value="Yeşilkart Sigortalısı" />
+                    <label class="form-check-label" for="greenCard">Yeşilkart Sigortalısı</label>
+                  </div> -->
+                  <!-- <div class="form-group not-border checkbox form-check">
+                    <input type="radio" name="insurance" class="form-check-input" id="bank"
+                      value="Banka Sigortalısı" />
+                    <label class="form-check-label" for="bank">Banka Sigortalısı</label>
+                  </div> -->
+                  <!-- <div class="form-group not-border checkbox form-check">
+                    <input type="radio" name="insurance" class="form-check-input" id="abroad"
+                      value="Yurtdışı Sigortalısı" />
+                    <label class="form-check-label" for="abroad">Yurtdışı Sigortalısı</label>
+                  </div> -->
+                  <div class="form-group not-border checkbox form-check">
+                    <input type="radio" name="insurance" class="form-check-input" id="aok"
+                      value="AOK" />
+                    <label class="form-check-label" for="aok">AOK </label>
                   </div>
                   <div class="form-group not-border checkbox form-check">
-                    <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1"
+                    <input type="radio" name="insurance" class="form-check-input" id="bkk"
+                      value="BKK" />
+                    <label class="form-check-label" for="bkk">BKK </label>
+                  </div>
+                  <div class="form-group not-border checkbox form-check">
+                    <input type="radio" name="insurance" class="form-check-input" id="ehic"
                       value="EHIC (Europan Health Insurance Card)" />
-                    <label class="form-check-label" for="exampleRadio1">EHIC (Europan Health Insurance Card) </label>
+                    <label class="form-check-label" for="ehic">EHIC (Europan Health Insurance Card) </label>
                   </div>
                   <div class="form-group not-border checkbox form-check">
-                    <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1"
+                    <input type="radio" name="insurance" class="form-check-input" id="ghıc"
                       value="Global Health Insurance Card (GHIC)" />
-                    <label class="form-check-label" for="exampleRadio1">Global Health Insurance Card (GHIC) </label>
+                    <label class="form-check-label" for="ghıc">GHIC (Global Health Insurance Card)</label>
                   </div>
                   <div class="form-group not-border checkbox form-check">
-                    <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1"
-                      value="Sigortam Yok/Kendim Ödeyeceğim" />
-                    <label class="form-check-label" for="exampleRadio1">Sigortam Yok/Kendim Ödeyeceğim </label>
-                  </div>
-                  <div class="form-group not-border checkbox form-check">
-                    <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1" value="Diğer" />
-                    <label class="form-check-label" for="exampleRadio1">Diğer</label>
+                    <input type="radio" name="insurance" class="form-check-input" id="other" value="Diğer" />
+                    <label class="form-check-label" for="other">Diğer</label>
                   </div>
                 </div>
                 <div id="payment" class="nosgk mt-1" style="display: none;">
