--- a/src/views/user/partials/filter.ejs
+++ b/src/views/user/partials/filter.ejs
@@ -15,147 +15,165 @@
       </div>
       <div class="tm-categories-subtitle">Merkez Ortalama Puanı</div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox49" checked />
-        <label class="form-check-label selected" for="filterCheckBox49"> Süper +9 </label>
+        <input class="form-check-input" type="checkbox" value="Süper" name="centerPoint" id="Super" />
+        <label class="form-check-label selected" for="Super"> Süper +9 </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox48" />
-        <label class="form-check-label selected" for="filterCheckBox48"> Çok İyi +7 </label>
+        <input class="form-check-input" type="checkbox" value="Çok iyi" name="centerPoint" id="Cok_iyi" />
+        <label class="form-check-label selected" for="Cok_iyi"> Çok İyi +7 </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox47" />
-        <label class="form-check-label selected" for="filterCheckBox47"> İyi +6 </label>
+        <input class="form-check-input" type="checkbox" value="İyi" name="centerPoint" id="Iyi" />
+        <label class="form-check-label selected" for="Iyi"> İyi +6 </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox46" />
-        <label class="form-check-label selected" for="filterCheckBox46"> Ortalama +5 </label>
+        <input class="form-check-input" type="checkbox" value="Ortalama" name="centerPoint" id="Ortalama" />
+        <label class="form-check-label selected" for="Ortalama"> Ortalama +5 </label>
       </div>
       <div class="tm-categories-subtitle">Diyaliz Tedavisi Tipi</div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox1" checked />
-        <label class="form-check-label selected" for="filterCheckBox1"> Hemodiyaliz </label>
+        <input class="form-check-input" type="checkbox" value="Hemodiyaliz" name="dialysisType" id="Hemodiyaliz"  />
+        <label class="form-check-label selected" for="Hemodiyaliz"> Hemodiyaliz </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox2" />
-        <label class="form-check-label selected" for="filterCheckBox2"> Hemodiyafiltrasyon </label>
+        <input class="form-check-input" type="checkbox" value="Hemodiyafiltrasyon" name="dialysisType" id="Hemodiyafiltrasyon" />
+        <label class="form-check-label selected" for="Hemodiyafiltrasyon"> Hemodiyafiltrasyon </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox3" />
-        <label class="form-check-label selected" for="filterCheckBox3"> Merkezde Gece Hemodiyalizi </label>
+        <input class="form-check-input" type="checkbox" value="Merkezde Gece Hemodiyalizi" name="dialysisType" id="Merkezde_Gece_Hemodiyalizi" />
+        <label class="form-check-label selected" for="Merkezde_Gece_Hemodiyalizi"> Merkezde Gece Hemodiyalizi </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox4" />
-        <label class="form-check-label selected" for="filterCheckBox4"> Ev Hemodiyalizi </label>
+        <input class="form-check-input" type="checkbox" value="Ev Hemodiyalizi" name="dialysisType" id="Ev_Hemodiyalizi" />
+        <label class="form-check-label selected" for="Ev_Hemodiyalizi"> Ev Hemodiyalizi </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox5" />
-        <label class="form-check-label selected" for="filterCheckBox5"> Hemşireli Ev Hemodiyalizi </label>
+        <input class="form-check-input" type="checkbox" value="Hemşireli Ev Hemodiyalizi" name="dialysisType" id="Hemsireli_Ev_Hemodiyalizi" />
+        <label class="form-check-label selected" for="Hemsireli_Ev_Hemodiyalizi"> Hemşireli Ev Hemodiyalizi </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox6" />
-        <label class="form-check-label selected" for="filterCheckBox6"> Periton Diyalizi </label>
+        <input class="form-check-input" type="checkbox" value="Periton Diyalizi" name="dialysisType" id="Periton_Diyalizi" />
+        <label class="form-check-label selected" for="Periton_Diyalizi"> Periton Diyalizi </label>
       </div>
       <div class="tm-categories-subtitle">Seans İçi Hizmetler</div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox7" checked />
-        <label class="form-check-label selected" for="filterCheckBox7"> Seans İçi Yiyecek Sunumu </label>
+        <input class="form-check-input" type="checkbox" value="Seans İçi Yiyecek Sunumu" name="inSessionService" id="Seans_Ici_Yiyecek_Sunumu"  />
+        <label class="form-check-label selected" for="Seans_Ici_Yiyecek_Sunumu"> Seans İçi Yiyecek Sunumu </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox8" />
-        <label class="form-check-label selected" for="filterCheckBox8"> Ücretsiz Ulaşım Hizmeti </label>
+        <input class="form-check-input" type="checkbox" value="Ücretsiz Ulaşım Hizmeti" name="inSessionService" id="Ucretsiz_Ulasim_Hizmeti" />
+        <label class="form-check-label selected" for="Ucretsiz_Ulasim_Hizmeti"> Ücretsiz Ulaşım Hizmeti </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox9" />
-        <label class="form-check-label selected" for="filterCheckBox9"> Kişiye Özel Tv Hizmeti </label>
+        <input class="form-check-input" type="checkbox" value="Kişiye Özel Tv Hizmeti"  name="inSessionService" id="Kisiye_Ozel_Tv_Hizmeti" />
+        <label class="form-check-label selected" for="Kisiye_Ozel_Tv_Hizmeti"> Kişiye Özel Tv Hizmeti </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox10" />
-        <label class="form-check-label selected" for="filterCheckBox10"> Ücretsiz Wifi Hizmeti </label>
+        <input class="form-check-input" type="checkbox" value="Ücretsiz Wifi Hizmeti" name="inSessionService" id="Ücretsiz_Wifi_Hizmeti" />
+        <label class="form-check-label selected" for="Ücretsiz_Wifi_Hizmeti"> Ücretsiz Wifi Hizmeti </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox11" />
-        <label class="form-check-label selected" for="filterCheckBox11"> Tedavi Salonlarında Klima </label>
+        <input class="form-check-input" type="checkbox" value="Tedavi Salonlarında Klima" name="inSessionService" id="Tedavi_Salonlarinda_Klima" />
+        <label class="form-check-label selected" for="Tedavi_Salonlarinda_Klima"> Tedavi Salonlarında Klima </label>
       </div>
       <div class="tm-categories-subtitle">Tesis İçi İmkanlar</div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox12" checked />
-        <label class="form-check-label selected" for="filterCheckBox12"> Tekerlekli Sandalye Kullanım </label>
+        <input class="form-check-input" type="checkbox" value="Tekerlekli Sandalye Kullanım" name="centerServices" id="Tekerlekli_Sandalye_Kullanim"  />
+        <label class="form-check-label selected" for="Tekerlekli_Sandalye_Kullanim"> Tekerlekli Sandalye Kullanım </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox13" />
-        <label class="form-check-label selected" for="filterCheckBox13"> Tutunma Kollu Tuvalet </label>
+        <input class="form-check-input" type="checkbox" value="Tutunma Kollu Tuvalet" name="centerServices" id="Tutunma_Kollu_Tuvalet" />
+        <label class="form-check-label selected" for="Tutunma_Kollu_Tuvalet"> Tutunma Kollu Tuvalet </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox14" />
-        <label class="form-check-label selected" for="filterCheckBox14"> Giriş-Çıkış Alanlarında Klima </label>
+        <input class="form-check-input" type="checkbox" value="Giriş-Çıkış Alanlarında Klima" name="centerServices" id="Giris_Çikis_Alanlarinda_Klima" />
+        <label class="form-check-label selected" for="Giris_Çikis_Alanlarinda_Klima"> Giriş-Çıkış Alanlarında Klima </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox15" />
-        <label class="form-check-label selected" for="filterCheckBox15"> Hassas Tartı </label>
+        <input class="form-check-input" type="checkbox" value="Hassas Tartı" name="centerServices" id="Hassas_Tarti" />
+        <label class="form-check-label selected" for="Hassas_Tarti"> Hassas Tartı </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox16" />
-        <label class="form-check-label selected" for="filterCheckBox16"> Rampalı Hassas Tartı </label>
+        <input class="form-check-input" type="checkbox" value="Rampalı Hassas Tartı" name="centerServices" id="Rampali_Hassas_Tarti" />
+        <label class="form-check-label selected" for="Rampali_Hassas_Tarti"> Rampalı Hassas Tartı </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox17" />
-        <label class="form-check-label selected" for="filterCheckBox17"> Kişisel Eşyalar İçin Kilitli Dolap </label>
+        <input class="form-check-input" type="checkbox" value="Kişisel Eşyalar İçin Kilitli Dolap" name="centerServices" id="Kisisel_Esyalar_Icin_Kilitli_Dolap" />
+        <label class="form-check-label selected" for="Kisisel_Esyalar_Icin_Kilitli_Dolap"> Kişisel Eşyalar İçin Kilitli Dolap </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox18" />
-        <label class="form-check-label selected" for="filterCheckBox18"> Hasta Aracı Otoparkı </label>
+        <input class="form-check-input" type="checkbox" value="Hasta Aracı Otoparkı" name="centerServices" id="Hasta_Araci_Otoparki" />
+        <label class="form-check-label selected" for="Hasta_Araci_Otoparki"> Hasta Aracı Otoparkı </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox19" />
-        <label class="form-check-label selected" for="filterCheckBox19"> Ambulans Hizmeti </label>
+        <input class="form-check-input" type="checkbox" value="Ambulans Hizmeti" name="centerServices" id="Ambulans_Hizmeti" />
+        <label class="form-check-label selected" for="Ambulans_Hizmeti"> Ambulans Hizmeti </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox20" />
-        <label class="form-check-label selected" for="filterCheckBox20"> 7/24 Ulaşılabilirlik </label>
+        <input class="form-check-input" type="checkbox" value="7/24 Ulaşılabilirlik" name="centerServices" id="7/24_Ulasilabilirlik" />
+        <label class="form-check-label selected" for="7/24_Ulasilabilirlik"> 7/24 Ulaşılabilirlik </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox21" />
-        <label class="form-check-label selected" for="filterCheckBox21"> İzole Hasta Odası </label>
+        <input class="form-check-input" type="checkbox" value="İzole Hasta Odası" name="centerServices" id="Izole_Hasta_Odasi" />
+        <label class="form-check-label selected" for="Izole_Hasta_Odasi"> İzole Hasta Odası </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox22" />
+        <input class="form-check-input" type="checkbox" value="El Kumandalı Otomatik Yatak" name="centerServices" id="El_Kumandali_Otomatik_Yatak" />
         <label class="form-check-label selected" for="filterCheckBox22"> El Kumandalı Otomatik Yatak </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox23" />
-        <label class="form-check-label selected" for="filterCheckBox23"> Hava Filtreleme Cihazı </label>
-      </div>
-      <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox24" />
-        <label class="form-check-label selected" for="filterCheckBox24"> Hava Filtreleme Cihazı </label>
+        <input class="form-check-input" type="checkbox" value="Hava Filtreleme Cihazı" name="centerServices" id="Hava_Filtreleme_Cihazi" />
+        <label class="form-check-label selected" for="Hava_Filtreleme_Cihazi"> Hava Filtreleme Cihazı </label>
       </div>
       <div class="tm-categories-subtitle">Merkez Binası Tipi</div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox25" checked />
-        <label class="form-check-label selected" for="filterCheckBox25"> Müstakil Binalı Merkezler </label>
+        <input class="form-check-input" type="checkbox" value="Müstakil Binalı Merkezler" name="buildType" id="Müstakil_Binali_Merkezler"  />
+        <label class="form-check-label selected" for="Müstakil_Binali_Merkezler"> Müstakil Binalı Merkezler </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox26" />
-        <label class="form-check-label selected" for="filterCheckBox26"> Müstakil Binada Olmayan Merkezler </label>
+        <input class="form-check-input" type="checkbox" value="Müstakil Binada Olmayan Merkezler" name="buildType" id="Müstakil_Binada_Olmayan_Merkezler" />
+        <label class="form-check-label selected" for="Müstakil_Binada_Olmayan_Merkezler"> Müstakil Binada Olmayan Merkezler </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox27" />
-        <label class="form-check-label selected" for="filterCheckBox27"> Hastane İçi Merkezler </label>
+        <input class="form-check-input" type="checkbox" value="Hastane İçi Merkezler" name="buildType" id="Hastane_Ici_Merkezler" />
+        <label class="form-check-label selected" for="Hastane_Ici_Merkezler"> Hastane İçi Merkezler </label>
       </div>
       <div class="tm-categories-subtitle">Diyaliz Merkezleri</div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox28" checked />
-        <label class="form-check-label selected" for="filterCheckBox28"> Tüm Diyaliz Merkezleri </label>
+        <input class="form-check-input" type="checkbox" value="Tüm Diyaliz Merkezleri" name="centerType" id="Tum_Diyaliz_Merkezleri"  />
+        <label class="form-check-label selected" for="Tum_Diyaliz_Merkezleri"> Tüm Diyaliz Merkezleri </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox29" />
-        <label class="form-check-label selected" for="filterCheckBox29"> Özel Diyaliz Merkezleri </label>
+        <input class="form-check-input" type="checkbox" value="Özel Diyaliz Merkezleri" name="centerType" id="Ozel_Diyaliz_Merkezleri" />
+        <label class="form-check-label selected" for="Ozel_Diyaliz_Merkezleri"> Özel Diyaliz Merkezleri </label>
       </div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="" id="filterCheckBox30" />
-        <label class="form-check-label selected" for="filterCheckBox30"> Kamu Diyaliz Merkezleri </label>
+        <input class="form-check-input" type="checkbox" value="Kamu Diyaliz Merkezleri" name="centerType" id="Kamu_Diyaliz_Merkezleri" />
+        <label class="form-check-label selected" for="Kamu_Diyaliz_Merkezleri"> Kamu Diyaliz Merkezleri </label>
       </div>
-      <button class="btn btn-second wide small">Filtreleri Uygula</button>
+      <button onclick="filterCenter()" class="btn btn-second wide small" type="button">Filtreleri Uygula</button>
     </form>
   </div>
 </div>
+
+<script>
+  function filterCenter(){
+    const centerPointList = document.querySelectorAll('input[name="centerPoint"]:checked');
+    const dialysisTypeList = document.querySelectorAll('input[name="dialysisType"]:checked');
+    const inSessionServiceList = document.querySelectorAll('input[name="inSessionService"]:checked');
+    const centerServicesList = document.querySelectorAll('input[name="centerServices"]:checked');
+    const buildTypeList = document.querySelectorAll('input[name="buildType"]:checked');
+    const centerTypeList = document.querySelectorAll('input[name="centerType"]:checked');
+
+    // dialysisTypeList.forEach(x => {
+    //   console.log(x.value);
+    // })
+
+    console.log(centerPointList);
+    console.log(dialysisTypeList);
+    console.log(inSessionServiceList);
+    console.log(centerServicesList);
+    console.log(buildTypeList);
+    console.log(centerTypeList);
+  }
+</script>
